modified based on 1st review

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -282,7 +282,18 @@
    "metadata": {},
    "source": [
     "**Answer:** \n",
-    "Since the R2 score is very close to 1, in fact, 90 percent of the variance in Y is predicatable from X, this model is pretty successful in capture the variation of the target value."
+    "* Since the R2 score is very close to 1, in fact, 90 percent of the variance in Y is predicatable from X, this model is pretty successful in capture the variation of the target value.\n",
+    "\n",
+    "==================The following are added based on first review==========================\n",
+    "* Suppose our data consists of $n$ sample points $x_1,\\ldots,x_n$ for the independent variable and $n$ samples for the corresponding dependent variable $y_1, \\ldots, y_n$. Say the regression model we have built that try to show the relationship between $x$ and $y$ is the function $f(x)$, thus for each $x_i$ we have its predicated value $f(x_i)$ and the actual observed value $y_i$.\n",
+    "\n",
+    "* We know the average of the dependent variable is calculated as $\\bar{y} = \\frac{1}{n}\\sum_i^n y_i$. Then, by definition, $R^2$ value is defined as $\\frac{SSR}{SST} =1-\\frac{SSE}{SST}$, where $SST = \\sum_i (y_i - \\bar{y})^2$ is the total sum of squares, which measures how large the data set is deviating from the mean. The statistic $SSR$ is the regression sum of squares, calculated as $SSR = \\sum_i(f(x_i)-\\bar{y})^2$ and the statistic $SSE = \\sum_i (f(x_i)-y_i)^2$. \n",
+    "\n",
+    "* We can see that $SSR$ measures how much the fitted value deviates from the mean $\\bar{y}$, while $SSE$ measures how much error there are between the fitted value is from the actual value. \n",
+    "\n",
+    "* Now, for a linear regression model, we have $SST = SSR + SSE$, since $SSR,SSE \\ge 0$ by definition, we see $R^2 = \\frac{SSR}{SST}$ only takes values in $[0,1]$. Also, note that $\\frac{SSR}{SST} = \\frac{SSR/n}{SST/n} $, which equals the ratio bewteen the variance of $f(x_i)$ and the variance of $y_i$ (it is also a fact that the average of the $f(x_i)$ is equal to $\\bar{y}$ for a linear regression model $f$). \n",
+    "\n",
+    "* Hence, we see that $R^2 = \\frac{SSR}{SST}$ really is measuring the percentage of variance that come from the fitted value in the total variance. A large $R^2$ value (close to $1$, that is) means that most of the variance of the data comes from the fitted value, which translates to that much of the variance is \"explianed\" by our model, which is an indicator that the model is a good fit for the data. Since $R^2 = 1-\\frac{SSE}{SST}$, for an $R^2$ close to $1$ we also have $SSE$ is close to $0$, meaning that the error between the fitted value from the actual value is small, which further explains why $R^2$ score is predicting the goodness of the fit."
    ]
   },
   {
@@ -405,7 +416,10 @@
     "**Answer: **\n",
     "* Here we choose the last graph, with a maxmum depth equals 10. \n",
     "* The score of the training curve almost remain constantly equal to 1, with a slight decrese as more training points are considered. The testing curve, on the other hand, increse quickly from 0 to above 0.5 as first 50 data are trainined, but stays almost constant for the next 300 training data, note there is a \"gap\" between the training and testing curve.\n",
-    "* This graph is an indication of overfitting, since a high score on the training set means that the model is doing well on the training set, while the gap indicates the model is struggling to generalize well on the testing set. Having more training points would benefit this model, as it will help with reduce the overfitting from the training data."
+    "* This graph is an indication of overfitting, since a high score on the training set means that the model is doing well on the training set, while the gap indicates the model is struggling to generalize well on the testing set. \n",
+    "\n",
+    "=====================added based on first review===============================\n",
+    "* In general, for an overfitting problem, having more training points would benefit this model, as it will help with reduce the overfitting from the training data. For this example, we see after a certain number of training points (300ish) the scores for both training and testing have flattened out, thus adding more traning points is not likey to help much in improving the performance here."
    ]
   },
   {
@@ -475,8 +489,8 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "* I think the model with maximum depth 3 does the best job.\n",
-    "* The validation score goes down after the model with maximum depth 4, and the trainig score for maximum depth 4 is larger than maximum depth 1,2 and 3. Hence we should select the model with maximum depth of 4."
+    "* I think the model with maximum depth $3$ (typo, should be $4$) does the best job.\n",
+    "* The validation score goes down after the model with maximum depth $4$, and the trainig score for maximum depth $4$ is larger than maximum depth $1,2$ and $3$. Hence we should select the model with maximum depth of $4$."
    ]
   },
   {
@@ -507,7 +521,16 @@
     "**Answer: **\n",
     "* Suppose you have a multiple set of hyperparameters in your model that you want to tune to find which combination is makes the best performance, grid search is a technique that accomplish this procedure. Basically, you make a table of the parameters and exhaust all possible combinations with the model, and pick the one that perform best with respect to some metric (like F1 score, R^2, etc)\n",
     "\n",
-    "* Its selects the best performing model from a range of parameters, thus optimize the learning algorithm for that range of parameters."
+    "* Its selects the best performing model from a range of parameters, thus optimize the learning algorithm for that range of parameters.\n",
+    "\n",
+    "=====================added based on first review===============================\n",
+    "* We first distinguish what is a parameter and a hyperparameter. A parameter is a number whose value can be learned from the model, for example, the coefficients in a linear regression model are parameters, they are learned by the model during the training process via gradient descent or other optimization methods. A hyperparameter, on the other hand, is a parameter whose value is set before the learning process begins. For example, the number of maximum depth in a decision tree model here is a hyper parameter, we first set the depth to a certain number (1,2,3,etc), then we train the model and compare the scores.\n",
+    "\n",
+    "* A grid search then, is a technique for tuning the hyperparameter. We first manully determine what are the set of hyperparameters we want to tune and their range. For each different category, we have a separate list of values for the hyperparameters that we think is apporiate for the model, this is the \"grid\" we are referring to. \n",
+    "\n",
+    "* For the implementation in this example, `grid = GridSearchCV(regressor, params, scoring_fnc, cv=cv_sets)`, we passed on the model we used to predict the data (regressor), the set of hyperparameters (paras), a way to evaluating the model, or the performance metric (the scoring function), and the set of data (cv_sets) that we used to train/cross validating. For different models, the evaulation metric are not necessarily the same, we can use $R^2$-score for one model, $F1$ score for another.\n",
+    "\n",
+    "* For each combination of hyperparameters, Grid search run the model with this particular set of hyperprameters to train the model, get the performance metric, and at the end of the day compare all these metrics to select the best performing model. For example, if we pass the hyperparameter max_depth for a decision tree model as $1,2,3,\\ldots$, grid search will train the decision tree model with max depth $1,2,3,\\ldots$ using the same datasets and select the one with the best performing metric (in this case the $R^2$ score)."
    ]
   },
   {
@@ -644,7 +667,10 @@
    "source": [
     "** Hint: ** The answer comes from the output of the code snipped above.\n",
     "\n",
-    "**Answer: ** Indeed, the model with max_depth 4 is the optimal model."
+    "**Answer: ** Indeed, the model with max_depth 4 is the optimal model.\n",
+    "\n",
+    "===============added based on first review==================\n",
+    "* It agrees with our guess in question $6$."
    ]
   },
   {
