modified quesition 4 based on 1st review

--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -949,9 +949,15 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
-    "* For a binary classification task, say the labels are $0$ and $1$. Logistic Regression makes the predication by estimating what is the probability of the sample equals $0$ or $1$. It usually uses a threshold of $0.5$, so, for example if Logistic regression calculates that the chance of a sample equals $0$ is $0.6$, which is bigger than $0.5$, then it tells us that we should classify this sample as $0$.\n",
+    "* What we have here is a binary classification problem, that is, we are trying to predict one of the two possibilities for a potential donar, which is the income level of this person. If we know some features of a person (age, sex, education level...), we want to come up with a way to decide if this person earns more than 50K or not.\n",
     "\n",
-    "* The training process is like other regression methods, first we choose a function that calculates the probability that a sample is $0$ or $1$, then we find the best parameter that makes the smallest error for all the training data by doing some math."
+    "* Hence, for simplicity we label \"a person earns more than 50K\" as 1, and label \"a person earns at most 50K\" as 0. We use logistic regression to help us decide how to label the income level given all the features.\n",
+    "\n",
+    "* Specifically, Logistic Regression will compute the likelihood, or probability of a person earns more than 50K. Probability is just a way of measuring how likely an event is going to happen. For example, when we throw a coin, we think there is a 50%-50% chance that it lands with head or tail, in this case we say that the probability of a coin land with head (or tail) is 50% percent, or 0.5. \n",
+    "\n",
+    "* Logistic Regression learns how to compute the probability of a person's chance to earn more than 50K by looking at training data. If it saw a lot of data scientist earns more than 50K, then it will decide that a data scientist is more likely to earn 50K, maybe with a probability of (say) 0.8(80%), depends on how the data is structured. \n",
+    "\n",
+    "* Then, Say we have Alice's age, education level and other info and we input these into Logistic Regression, it will output a number between 0 and 1, if this number is 0.5, it is saying that Alice has a 50% chance earning more tha 50K from the data, just like throwing a coin and land on head. In this case it is fair to decide either Alice will earn more than 50K or less, but such cases are rare, most of the time Logistic Regression will give a number that is either bigger than 0.5 or less than 0.5, if it is bigger than 0.5, which means Alice has more than 50% chance to earn 50K, we then give Alice a label \"1\" as she will be a potential donar for CharityML. Otherwise, we label Alice \"0\" as it has fewer than 50% chance that Alice earn more than 50K. That is how LR works in our problem."
    ]
   },
   {
